# simple-gui-d2d1

./: .clangd  CMakeLists.txt  Main.cpp  README.md  d2d1-app.sln  d2d1-app.vcxproj  d2d1-app.vcxproj.filters  resource.h
CMake/: x86_64-w64-mingw32.cmake
include/: board.h  enums.h  main.h  resource.h  window.h
resource/: resource.rc
src/: Main.cpp  board.cpp  window.cpp
